--- a/Whatsapp.web.net.test/Whatsapp.web.net.test.csproj
+++ b/Whatsapp.web.net.test/Whatsapp.web.net.test.csproj
@@ -9,6 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Logging.Net" Version="1.1.4" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.6.3" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="1.6.3" />
+    <PackageReference Include="NUnit" Version="4.1.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
     <PackageReference Include="ZXing.Net" Version="0.16.9" />
     <PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.12" />
@@ -18,4 +24,11 @@
     <ProjectReference Include="..\Whatsapp.web.net\Whatsapp.web.net.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="image.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
+
