--- a/Whatsapp.web.net/Whatsapp.web.net.csproj
+++ b/Whatsapp.web.net/Whatsapp.web.net.csproj
@@ -8,11 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FFmpeg.AutoGen" Version="6.1.0" />
+    <PackageReference Include="FFmpeg.AutoGen" Version="6.1.0.1" />
     <PackageReference Include="FFmpeg.Net" Version="1.1.0" />
     <PackageReference Include="FFMpegCore" Version="5.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="PuppeteerSharp" Version="15.1.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
