--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Whatsapp.web.net.test/App.config
+/Whatsapp.web.net.test/appsettings.json
