fix in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -361,6 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/Whatsapp.web.net.test/App.config
-/Whatsapp.web.net.test/appsettings.json
-/Whatsapp.web.net.example/appsettings.json
+src/Whatsapp.web.net.test/App.config
+src/Whatsapp.web.net.example/appsettings.json
+src/Whatsapp.web.net.test/appsettings.json
