--- a/src/Whatsapp.web.net/Whatsapp.web.net.csproj
+++ b/src/Whatsapp.web.net/Whatsapp.web.net.csproj
@@ -5,9 +5,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>0.1.3</AssemblyVersion>
-    <FileVersion>0.1.3</FileVersion>
-    <Version>0.1.3-alfa</Version>
+    <AssemblyVersion>0.1.4</AssemblyVersion>
+    <FileVersion>0.1.4</FileVersion>
+    <Version>0.1.4-alfa</Version>
     <Copyright>Apache 2.0</Copyright>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="FFMpegCore" Version="5.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="PuppeteerSharp" Version="16.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.3" />
