--- a/src/Whatsapp.web.net/Whatsapp.web.net.csproj
+++ b/src/Whatsapp.web.net/Whatsapp.web.net.csproj
@@ -5,9 +5,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>0.1.4</AssemblyVersion>
-    <FileVersion>0.1.4</FileVersion>
-    <Version>0.1.4-alfa</Version>
+    <AssemblyVersion>0.1.5</AssemblyVersion>
+    <FileVersion>0.1.5</FileVersion>
+    <Version>0.1.5</Version>
     <Copyright>Apache 2.0</Copyright>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
